系统管理前端

--- a/mongo/mongo-ui/src/assets/languages/en_us.json
+++ b/mongo/mongo-ui/src/assets/languages/en_us.json
@@ -20,7 +20,9 @@
         "edit": "Edit",
         "delete": "Delete",
         "operation": "Operation",
-        "batchDelete": "BatchDelete"
+        "batchDelete": "BatchDelete",
+        "comfirm": "Confirm",
+        "reset": "Reset"
     }
 
 }
