--- a/mongo/mongo-ui/src/assets/languages/zh_cn.json
+++ b/mongo/mongo-ui/src/assets/languages/zh_cn.json
@@ -19,6 +19,8 @@
         "edit": "编辑",
         "delete": "删除",
         "operation": "操作",
-        "batchDelete": "批量删除"
+        "batchDelete": "批量删除",
+        "comfirm": "确认",
+        "reset": "重置"
     }
 }
